test_regress/t/t_mem_slice_dtype_bad.out
%Error: t/t_mem_slice_dtype_bad.v:23:45: ADD unexpected in assignment to unpacked array
   23 |       completed_cnt[id] <= completed_cnt_dp + 1;
      |                                             ^
%Error: Exiting due to
